# sphinx-vivliostyle

./: AUTHORS.rst  README.rst  pyproject.toml
sphinx_vivlioStyle/: __init__.py
sphinx_vivlioStyle/builders/: translator.py  vivlioStyle.py  vivliostyle.py
sphinx_vivlioStyle/themes/vivlioStyle_theme/: __init__.py  page.html  theme.conf  toc.html  vivliostyle.config.js
sphinx_vivliostyle/builders/: translator.py  vivliostyle.py
sphinx_vivliostyle/themes/vivliostyle_theme/: __init__.py
