[tool.poetry]
name = "sphinx-vivliostyle"
version = "0.1.0"
description = ""
authors = ["Yu <batfish.ikimono@gmail.com>"]
license = "MIT"
readme = "README.rst"
packages = [{include = "sphinx_vivlioStyle"}]

[tool.poetry.dependencies]
python = "^3.10"
Sphinx = "^6.1.3"
libsass = "^0.22.0"
beautifulsoup4 = "^4.12.0"
html2text = "^2020.1.16"
pydash = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."sphinx.builders"]
vivliostyle="sphinx_vivlioStyle.builders.vivliostyle"

[tool.poetry.plugins."sphinx.html_themes"]
vivlioStyle_theme="sphinx_vivlioStyle.themes.vivlioStyle_theme"