[tool.poetry]
name = "sphinx-vivliostyle"
version = "0.1.0"
description = ""
authors = ["YuSabo <yusabo90002@gmail.com>"]
license = "MIT"
readme = "README.rst"
packages = [{include = "sphinx_vivliostyle"}]

[tool.poetry.dependencies]
python = "^3.10"
Sphinx = "^6.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."sphinx.builders"]
vivliostyle="sphinx_vivliostyle.builders.vivliostyle"

[tool.poetry.plugins."sphinx.html_themes"]
vivliostyle_theme="sphinx_vivliostyle.themes.vivliostyle_theme"